--- a/src/style.css
+++ b/src/style.css
@@ -24,17 +24,21 @@
 
 body {
   background-color: #f4f1de;
-  padding: 1.5rem;
   min-height: 100vh;
 }
 
 #app {
+  min-height: 100vh;
+}
+
+.first-section {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-direction: column;
   gap: 2rem;
-  min-height: 80vh;
+  padding: 0 2rem;
+  height: 100vh;
 }
 
 /* 
@@ -72,8 +76,8 @@ body {
 }
 .palette {
   display: flex;
-  top: 0;
-  right: 0;
+  top: 2rem;
+  right: 2rem;
   position: absolute;
   flex-direction: column;
 }
@@ -104,8 +108,7 @@ body {
   }
 }
 .palette-color:nth-child(1) {
-  background-color: #f4f1de;
-  border: 1px solid #3d405b;
+  background-color: #f0ebd2;
 }
 .palette-color:nth-child(2) {
   background-color: #e07a5f;
@@ -127,21 +130,73 @@ body {
 */
 
 .content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.item {
+  gap: 0.5rem;
   display: flex;
   width: 100%;
   height: 50vh;
-  justify-content: center;
+  justify-content: space-around;
   align-items: self-start;
   place-self: flex-end normal;
   position: relative;
+  padding: 1rem;
 }
 
-.content img {
+.item img {
   height: 100%;
 }
-.content span {
-  width: 5rem;
+.item span {
   font-family: "Libre Baskerville", serif;
   font-weight: 400;
   font-style: italic;
+  text-wrap: balance;
+}
+
+/* 
+----------------------------------------------------------- 
+| SECOND SECTION
+-----------------------------------------------------------
+*/
+
+.second-section {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.letter {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-overlay {
+  height: 80%;
+  position: absolute;
+  z-index: -10;
+  background-color: #000000;
+}
+
+.image-overlay img {
+  height: 100%;
+  opacity: 0.2;
+}
+
+.letter span {
+  color: #f0ebd2;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-family: "Libre Baskerville", serif;
+  font-style: italic;
+}
+
+.paper-scrape {
+  mix-blend-mode: multiply;
+  background-blend-mode: multiply;
 }
